fix text overflow issues

--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -29,10 +29,6 @@
   background: var(--chakra-colors-bg);
 }
 
-.fc .fc-timegrid-event-harness-inset {
-  z-index: auto !important;
-}
-
 .fc .fc-timegrid-event-harness-inset .fc-timegrid-event {
   box-shadow: var(--chakra-colors-bg) 0px 0px 0px 1.5px;
 }
@@ -56,7 +52,6 @@
   position: absolute;
   top: -1.25rem;
   right: 0.25rem;
-  z-index: 2;
 }
 
 .fc .fc-timegrid-event {
